<?xml version="1.0" encoding="utf-8"?>

<!DOCTYPE resources [
  <!ENTITY lat_lon        "Latitude, Longitude">
  <!ENTITY fixed_position "Fixed Position">
  <!ENTITY trip           "Trip">
  <!ENTITY origin         "Origin">
  <!ENTITY destination    "Destination">
]>

<resources>
    <string name="app_name">Mock my GPS</string>

    <!-- GeoIntentActivity ================================================= -->

    <string name="geo_intent_menu_title">Use Geo-Intent For:</string>
    <string name="geo_intent_option_1">&fixed_position;</string>
    <string name="geo_intent_option_2">&trip; - &origin;</string>
    <string name="geo_intent_option_3">&trip; - &destination;</string>
    <string name="geo_intent_option_4">New Bookmark</string>

    <!-- MainActivity ====================================================== -->

    <!-- extras -->
    <string translatable="false" name="MainActivity_extra_current_tab_tag">current_tab_tag</string>
    <string translatable="false" name="MainActivity_extra_toast">toast</string>

    <!-- actionbar -->
    <string name="MainActivity_actionbar_item_1">Save Bookmark</string>
    <string name="MainActivity_actionbar_item_2">Bookmarks</string>
    <string name="MainActivity_actionbar_item_3">Preferences</string>

    <string translatable="false" name="MainActivity_tab_1_tag">tag_1</string>
    <string translatable="false" name="MainActivity_tab_2_tag">tag_2</string>

    <string name="MainActivity_tab_1_label">&fixed_position;</string>
    <string name="MainActivity_tab_2_label">&trip; Simulation</string>

    <!-- conditional dialog: Save Bookmark -->
    <string name="save_bookmark_menu_title">Location to Save:</string>
    <string name="save_bookmark_option_1">&origin;</string>
    <string name="save_bookmark_option_2">&destination;</string>

    <!-- tab_1: FixedPositionActivity ====================================== -->

    <string name="FixedPositionActivity_field_1">Location:\n<small>(&lat_lon;)</small></string>

    <!-- tab_2: TripSimulationActivity ===================================== -->

    <string name="TripSimulationActivity_field_1">&origin;:\n<small>(&lat_lon;)</small></string>
    <string name="TripSimulationActivity_field_2">&destination;:\n<small>(&lat_lon;)</small></string>
    <string name="TripSimulationActivity_field_3">Duration:\n<small>(seconds)</small></string>

    <!-- BookmarksActivity ================================================= -->

    <!-- extras -->
    <string translatable="false" name="BookmarksActivity_extra_add_lat">lat</string>
    <string translatable="false" name="BookmarksActivity_extra_add_lon">lon</string>

    <!-- actionbar -->
    <string name="BookmarksActivity_actionbar_item_1">Add</string>
    <string name="BookmarksActivity_actionbar_item_2">Backup</string>
    <string name="BookmarksActivity_actionbar_item_3">Restore</string>

    <string name="open_bookmark_menu_title">Use Bookmark For:</string>
    <string name="open_bookmark_option_1">@string/geo_intent_option_1</string>
    <string name="open_bookmark_option_2">@string/geo_intent_option_2</string>
    <string name="open_bookmark_option_3">@string/geo_intent_option_3</string>

    <string name="edit_bookmark_field_1">Title:</string>
    <string name="edit_bookmark_field_2">Location:\n<small>(&lat_lon;)</small></string>

    <!-- PreferencesActivity =============================================== -->

    <string name="PreferencesActivity_heading_1">General</string>
    <string name="PreferencesActivity_heading_2">@string/MainActivity_tab_1_label</string>
    <string name="PreferencesActivity_heading_3">@string/MainActivity_tab_2_label</string>

    <!-- heading_1 -->
    <string name="PreferencesActivity_field_1">Time (ms) between each update:</string>

    <!-- heading_2 -->
    <string name="PreferencesActivity_field_2">Number of times to mock location:\n<small>(0 = continue until explicitly stopped)</small></string>
    <string name="PreferencesActivity_field_3">Show joystick:</string>
    <string name="PreferencesActivity_field_4">Joystick lat/lon increment:</string>

    <!-- heading_3 -->
    <string name="PreferencesActivity_field_5">Hold destination as fixed position:</string>

    <!-- common ============================================================ -->

    <!-- buttons -->
    <string name="label_button_start">START</string>
    <string name="label_button_stop">STOP</string>
    <string name="label_button_update">UPDATE</string>
    <string name="label_button_cancel">CANCEL</string>
    <string name="label_button_delete">DELETE</string>
    <string name="label_button_save">SAVE</string>

    <!-- shared preferences -->
    <string translatable="false" name="prefs_filename">PREFS</string>
    <!-- string (json) --><string translatable="false" name="pref_bookmarks">bookmarks</string>
    <!-- int      (ms) --><string translatable="false" name="pref_time_interval">time_interval</string>
    <!-- int           --><string translatable="false" name="pref_fixed_count">fixed_count</string>
    <!-- boolean       --><string translatable="false" name="pref_fixed_joystick_enabled">fixed_joystick_enabled</string>
    <!-- double        --><string translatable="false" name="pref_fixed_joystick_increment">fixed_joystick_increment</string>
    <!-- boolean       --><string translatable="false" name="pref_trip_hold_destination">trip_hold_destination</string>
    <!-- double        --><string translatable="false" name="pref_trip_origin_lat">trip_origin_lat</string>
    <!-- double        --><string translatable="false" name="pref_trip_origin_lon">trip_origin_lon</string>
    <!-- double        --><string translatable="false" name="pref_trip_destination_lat">trip_destination_lat</string>
    <!-- double        --><string translatable="false" name="pref_trip_destination_lon">trip_destination_lon</string>
    <!-- int     (sec) --><string translatable="false" name="pref_trip_duration">trip_duration</string>

    <!-- errors -->
    <!-- copied from https://github.com/osmandapp/Osmand/blob/2.0.0/OsmAnd/res/values/strings.xml#L2760 -->
    <string name="error_geo_intent">Could not parse geo intent \'%s\'.</string>
    <string name="error_number_format">Could not parse number \'%s\'.</string>
    <string name="error_location_format">Could not parse location \'%s\'.</string>
    <string name="error_bookmarkitem_exists">Bookmark already exists \'%s\'.</string>
    <string name="error_missing_required_value">Error: Missing Required Value</string>
    <string name="error_add_bookmarkitem">Error: Could not add new bookmark</string>

    <!-- notifications -->
    <string name="notification_service_ticker">Mock my GPS: running</string>
    <string name="notification_service_content_line1">Mock my GPS</string>
    <!--
    <string name="notification_service_content_line2">Click to open. Dismiss to stop.</string>
    -->
    <string name="notification_service_content_line2">Click to open.</string>

</resources>
