<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TripSimulationActivity_field_1"
            style="@style/input_label_textview" />

        <EditText
            android:id="@+id/input_trip_origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TripSimulationActivity_field_2"
            style="@style/input_label_textview" />

        <EditText
            android:id="@+id/input_trip_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TripSimulationActivity_field_3"
            style="@style/input_label_textview" />

        <EditText
            android:id="@+id/input_trip_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|textMultiLine" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_toggle_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/label_button_start" />

            <Button
                android:visibility="gone"
                android:layout_marginLeft="20dp"
                android:id="@+id/button_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/label_button_update" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
